added spring security

--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,13 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-security:'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation	'org.springframework.boot:spring-boot-starter-security'
+	implementation  'com.auth0:java-jwt:4.2.2'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	compileOnly 'org.projectlombok:lombok:1.18.30'
+	annotationProcessor 'org.projectlombok:lombok:1.18.30'
 }
 
 tasks.named('test') {
